// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcModal should have the ec-modal--lg class 1`] = `
<div
  class="ec-modal__content ec-modal--lg"
>
  <header
    class="ec-modal__header"
    data-test="ec-modal__header"
  >
     
    <a
      class="ec-modal__close"
      data-test="ec-modal__close"
      href="#"
    >
      <svg
        class="ec-modal__close-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </a>
  </header>
   
  <main
    class="ec-modal__main"
    data-test="ec-modal__main"
  />
   
  <!---->
</div>
`;

exports[`EcModal should have the style attribute z-index when the z-index props is given 1`] = `
<div
  class="ec-modal"
  data-test="ec-modal"
  name="ec-modal__fade"
  style="z-index: 235;"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
      data-test="ec-modal__header"
    >
       
      <a
        class="ec-modal__close"
        data-test="ec-modal__close"
        href="#"
      >
        <svg
          class="ec-modal__close-icon ec-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </a>
    </header>
     
    <main
      class="ec-modal__main"
      data-test="ec-modal__main"
    />
     
    <!---->
  </div>
</div>
`;

exports[`EcModal should not render close button when isClosable is set to false 1`] = `
<header
  class="ec-modal__header"
  data-test="ec-modal__header"
>
   
  <!---->
</header>
`;

exports[`EcModal should not render the modal if "showModal" is not set to true 1`] = `<!---->`;

exports[`EcModal should render basic modal 1`] = `
<div
  class="ec-modal"
  data-test="ec-modal"
  name="ec-modal__fade"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
      data-test="ec-modal__header"
    >
       
      <a
        class="ec-modal__close"
        data-test="ec-modal__close"
        href="#"
      >
        <svg
          class="ec-modal__close-icon ec-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </a>
    </header>
     
    <main
      class="ec-modal__main"
      data-test="ec-modal__main"
    >
      <p>
        Before we can process your application we need you to upload your management accounts. You can do this now or leave it for later.
      </p>
    </main>
     
    <!---->
  </div>
</div>
`;

exports[`EcModal should render close button 1`] = `
<header
  class="ec-modal__header"
  data-test="ec-modal__header"
>
   
  <a
    class="ec-modal__close"
    data-test="ec-modal__close"
    href="#"
  >
    <svg
      class="ec-modal__close-icon ec-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-close"
      />
    </svg>
  </a>
</header>
`;

exports[`EcModal should render footer left section when slot is passed 1`] = `
<footer
  class="ec-modal__footer"
  data-test="ec-modal__footer"
>
  <div
    class="ec-modal__footer-left-content"
  >
    <p>
      Need Help ?
    </p>
  </div>
   
  <!---->
   
  <!---->
</footer>
`;

exports[`EcModal should render negative button if slot is passed 1`] = `
<footer
  class="ec-modal__footer"
  data-test="ec-modal__footer"
>
  <!---->
   
  <div
    class="ec-loading ec-modal__btn-loading ec-modal__btn-loading--right"
    data-test="ec-loading"
  >
    <!---->
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      <button
        class="ec-btn ec-modal__negative-btn ec-btn--md ec-btn--rounded ec-btn--secondary"
        data-test="ec-modal__negative-btn ec-btn"
        type="button"
      >
        <!---->
         
        <span
          class=""
          data-test="ec-btn__text"
        >
          Skip for now
        </span>
         
        <!---->
      </button>
    </div>
  </div>
   
  <!---->
</footer>
`;

exports[`EcModal should render negative button with given category 1`] = `
<footer
  class="ec-modal__footer"
  data-test="ec-modal__footer"
>
  <!---->
   
  <div
    class="ec-loading ec-modal__btn-loading ec-modal__btn-loading--right"
    data-test="ec-loading"
  >
    <!---->
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      <button
        class="ec-btn ec-modal__negative-btn ec-btn--md ec-btn--rounded ec-btn--warning"
        data-test="ec-modal__negative-btn ec-btn"
        type="button"
      >
        <!---->
         
        <span
          class=""
          data-test="ec-btn__text"
        >
          Negative button
        </span>
         
        <!---->
      </button>
    </div>
  </div>
   
  <!---->
</footer>
`;

exports[`EcModal should render negative button with the loading status if slot is passed 1`] = `
<footer
  class="ec-modal__footer"
  data-test="ec-modal__footer"
>
  <!---->
   
  <div
    class="ec-loading ec-modal__btn-loading ec-modal__btn-loading--right"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-loading__icon ec-icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
     
    <div
      class="ec-loading__content"
      data-test="ec-loading__content"
    >
      <button
        class="ec-btn ec-modal__negative-btn ec-btn--md ec-btn--rounded ec-btn--secondary"
        data-test="ec-modal__negative-btn ec-btn"
        type="button"
      >
        <!---->
         
        <span
          class=""
          data-test="ec-btn__text"
        >
          Skip for now
        </span>
         
        <!---->
      </button>
    </div>
  </div>
   
  <!---->
</footer>
`;

exports[`EcModal should render positive button if slot is passed 1`] = `
<footer
  class="ec-modal__footer"
  data-test="ec-modal__footer"
>
  <!---->
   
  <!---->
   
  <div
    class="ec-loading ec-modal__btn-loading"
    data-test="ec-loading"
  >
    <!---->
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      <button
        class="ec-btn ec-modal__positive-btn ec-btn--md ec-btn--rounded ec-btn--primary ec-modal__positive-btn--right"
        data-test="ec-modal__positive-btn ec-btn"
        type="button"
      >
        <!---->
         
        <span
          class=""
          data-test="ec-btn__text"
        >
          Update management accounts
        </span>
         
        <!---->
      </button>
    </div>
  </div>
</footer>
`;

exports[`EcModal should render positive button with given category 1`] = `
<footer
  class="ec-modal__footer"
  data-test="ec-modal__footer"
>
  <!---->
   
  <!---->
   
  <div
    class="ec-loading ec-modal__btn-loading"
    data-test="ec-loading"
  >
    <!---->
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      <button
        class="ec-btn ec-modal__positive-btn ec-btn--md ec-btn--rounded ec-btn--error ec-modal__positive-btn--right"
        data-test="ec-modal__positive-btn ec-btn"
        type="button"
      >
        <!---->
         
        <span
          class=""
          data-test="ec-btn__text"
        >
          Positive button
        </span>
         
        <!---->
      </button>
    </div>
  </div>
</footer>
`;

exports[`EcModal should render positive button with the loading status if slot is passed 1`] = `
<footer
  class="ec-modal__footer"
  data-test="ec-modal__footer"
>
  <!---->
   
  <!---->
   
  <div
    class="ec-loading ec-modal__btn-loading"
    data-test="ec-loading"
  >
    <div
      class="ec-loading__backdrop"
      data-test="ec-loading__backdrop"
    >
      <svg
        class="ec-loading__icon ec-icon"
        data-test="ec-loading__icon"
        height="48"
        width="48"
      >
        <use
          xlink:href="#ec-simple-loading"
        />
      </svg>
    </div>
     
    <div
      class="ec-loading__content"
      data-test="ec-loading__content"
    >
      <button
        class="ec-btn ec-modal__positive-btn ec-btn--md ec-btn--rounded ec-btn--primary ec-modal__positive-btn--right"
        data-test="ec-modal__positive-btn ec-btn"
        type="button"
      >
        <!---->
         
        <span
          class=""
          data-test="ec-btn__text"
        >
          Update management accounts
        </span>
         
        <!---->
      </button>
    </div>
  </div>
</footer>
`;

exports[`EcModal v-model should not render the modal when we pass to model false 1`] = `<!---->`;

exports[`EcModal v-model should render the modal when we pass to model true 1`] = `
<div
  class="ec-modal"
  data-test="ec-modal"
  name="ec-modal__fade"
>
  <div
    class="ec-modal__content"
  >
    <header
      class="ec-modal__header"
      data-test="ec-modal__header"
    >
       
      <a
        class="ec-modal__close"
        data-test="ec-modal__close"
        href="#"
      >
        <svg
          class="ec-modal__close-icon ec-icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </a>
    </header>
     
    <main
      class="ec-modal__main"
      data-test="ec-modal__main"
    />
     
    <!---->
  </div>
</div>
`;

exports[`EcModal v-model should render the modal when we pass to model true 2`] = `<!---->`;
